# luckfox_ai_camera

./: CMakeLists.txt  README.md  main.cpp
include/: app.h  frame_processor.h  memory_pool.h  rknn_interface.h  rtsp_server.h  utilities.h  video_encoder.h
src/: app.cc  frame_processor.cc  luckfox_mpi.cc  main.cc  memory_pool.cc  rknn_interface.cc  rtsp_server.cc  utilities.cc  video_encoder.cc
